--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "unplugin-auto-import": "^0.15.1",
     "unplugin-icons": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.2.1",
     "vitepress": "^1.0.0-alpha.61",
     "vue": "^3.2.47"
   },
