--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
+  "author": {
+    "name": "fzdwx",
+    "email": "likelovec@gmail.com",
+    "url": "https://github.com/fzdwx"
+  },
+  "name": "vitepress-blog-theme",
+  "version": "0.2.3",
+  "description": "A blog theme for vitepress",
+  "module": "./src/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fzdwx/vitepress-blog-theme"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "@iconify/json": "^2.2.38",
+    "@iconify/json": "^2.2.39",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.15.6",
-    "@vue-macros/volar": "^0.9.1",
+    "@types/body-scroll-lock": "^3.1.0",
+    "@types/node": "^18.15.10",
+    "@vue-macros/volar": "^0.9.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "unplugin-auto-import": "^0.15.1",
+    "unplugin-auto-import": "^0.15.2",
     "unplugin-icons": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.2.1",
-    "vitepress": "^1.0.0-alpha.61",
+    "vitepress": "1.0.0-alpha.62",
     "vue": "^3.2.47"
   },
   "scripts": {
@@ -21,10 +35,13 @@
     "sync": "go run ."
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vueuse/core": "^9.13.0",
+    "body-scroll-lock": "4.0.0-beta.0",
     "dayjs": "^1.11.7",
     "gray-matter": "^4.0.3",
-    "lxgw-wenkai-screen-webfont": "^1.7.0"
+    "lxgw-wenkai-screen-webfont": "^1.7.0",
+    "vite": "^4.2.1"
   },
   "postcss": {
     "plugins": {
