--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,7 +9,6 @@ env:
   token: ${{ secrets.TOKEN }}
   repo: fzdwx.github.io
 
-
 jobs:
   update-issues:
     runs-on: ubuntu-latest
@@ -18,7 +17,9 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: 1.20.2
-      - run: go install github.com/fzdwx/bang
+      - run: git clone https://github.com/fzdwx/vitepress-blog-theme
+      - run: cd vitepress-blog-theme && go install .
+      - run: cd .. && rm -rf vitepress-blog-theme
       - run: bang version
       - run: bang sync
       - run: git config --global user.name "github.action"
