--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   workflow_dispatch: {}
   workflow_run:
-    workflows: ["update-issues"]
+    workflows: ["SyncIssues"]
     types:
       - completed
   push:
