--- a/.github/workflows/genfeed.yml
+++ b/.github/workflows/genfeed.yml
@@ -3,7 +3,7 @@ name: GenFeed
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 * * * *"
   push:
     branches:
       - main
