--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,5 +25,5 @@ jobs:
       - run: git config --global user.name "github.action"
       - run: git config --global user.email "action@github.com"
       - run: git add .
-      - run: git commit -a -m "update"
+      - run: git commit -a -m "update issues"
       - run: git push
