--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "add": "^2.0.6",
     "install": "^0.13.0",
     "nuxt": "^3.4.3",
-    "pinceau": "^0.18.9"
+    "nuxt-icon": "^0.4.0"
   }
 }
