--- a/.github/workflows/genfeed.yml
+++ b/.github/workflows/genfeed.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - "links.md"
+      - "content/sub-feeds.md"
 
 env:
   token: ${{ secrets.TOKEN }}
@@ -21,10 +21,8 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: 1.20.2
-      - run: cd /tmp && git clone https://github.com/fzdwx/vitepress-blog-theme
-      - run: cd /tmp/vitepress-blog-theme && go install .
-      - run: cd /tmp && rm -rf vitepress-blog-theme
       - uses: actions/checkout@v3
+      - run: go install .
       - run: bang version
       - run: bang feed
       - run: git config --global user.name "github.action"
