--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "add": "^2.0.6",
+    "dayjs": "^1.11.7",
     "install": "^0.13.0",
     "nuxt": "^3.4.3",
     "nuxt-icon": "^0.4.0"
