--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.7",
     "install": "^0.13.0",
     "nuxt": "^3.4.3",
-    "nuxt-icon": "^0.4.0"
+    "nuxt-icon": "^0.4.0",
+    "octokit": "^2.0.14"
   }
 }
