--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: go install .
       - run: bang version
-      - run: bang feed
+      - run: bang tl
       - run: git config --global user.name "github.action"
       - run: git config --global user.email "action@github.com"
       - run: |
