--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "install": "^0.13.0",
     "nuxt": "^3.4.3",
     "nuxt-icon": "^0.4.0",
-    "octokit": "^2.0.14"
-  },
-  "dependencies": {
+    "octokit": "^2.0.14",
     "lxgw-wenkai-webfont": "^1.7.0"
   }
 }
