--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.6.0",
+    "@nuxt/content": "^2.7.2",
     "@nuxt/devtools": "^0.4.6",
-    "@nuxtjs/tailwindcss": "^6.6.8",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "add": "^2.0.6",
@@ -19,7 +19,6 @@
     "install": "^0.13.0",
     "nuxt": "^3.4.3",
     "nuxt-icon": "^0.4.0",
-    "octokit": "^2.0.14",
-    "lxgw-wenkai-webfont": "^1.7.0"
+    "octokit": "^2.0.14"
   }
 }
