--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "@vueuse/core": "^10.3.0",
     "sass": "^1.66.1",
-    "sitemap": "^7.1.1",
-    "vue-command-palette": "^0.2.0"
+    "sitemap": "^7.1.1"
   }
 }
